# aspose-mcp-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile  README.md  SECURITY.md  aspose-mcp-analysis-template.md  docker-compose.yml  dotnet-mcp-gitignore-template.gitignore  github-push-guide.md  products.json  pyproject.toml  requirements-dev.txt
.github/workflows/: check-versions.yml  ci.yml
docs/: deployment.md  docker.md  how-it-works.md  mcp-server-standards.md  new-product-analysis-template.md  tool-map-template.md
scripts/: analyze_new_product.py  analyze_new_product_aspose.py  analyze_release.py  analyze_release_aspose.py  check_nuget.py  ci-test.sh  ci-validate.sh  implement_tools_aspose.py  merge_dependabot.py  merge_dependabot_aspose.py  new_product.py  run.sh  upgrade_product.py
tests/: conftest.py  test_analyze_release.py  test_check_nuget.py  test_hitl_and_outcomes.py  test_new_product.py
