[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mcp-agent"
version = "0.3.0"
description = "Central version tracker and upgrade automation for Aspose .NET MCP servers"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = true

# Anthropic SDK has complex union types that generate false positives
[[tool.mypy.overrides]]
module = ["scripts.analyze_release", "scripts.analyze_new_product"]
ignore_errors = true

[tool.coverage.run]
source = ["scripts"]
omit = [
    # Anthropic SDK wrappers — not used in main Aspose LLM flow
    "scripts/analyze_release.py",
    "scripts/analyze_new_product.py",
    "scripts/merge_dependabot.py",
    # Pure I/O orchestration — LLM calls, git, network untestable without mocks
    "scripts/analyze_new_product_aspose.py",
    "scripts/merge_dependabot_aspose.py",
]

[tool.coverage.report]
fail_under = 35
exclude_lines = [
    "if __name__ == .__main__.:",
    "except Exception:",
    "except RuntimeError:",
    "raise RuntimeError",
]
